styles.css
:root {
    --background-gradient: linear-gradient(to bottom, #c4ccc1, #b4bcc1);
    --text-color: #827970; 
    --box-background: #bbc2b7;
    --button-background: #4b6b47;  
    --button-hover: #e07a5f;  
    --shadow-color: rgba(0, 0, 0, 0.3);
    --svg-filter: invert(49%) sepia(1%) saturate(2777%) hue-rotate(349deg) brightness(97%) contrast(95%);
}

@media (prefers-color-scheme: dark) {
    :root {
        --background-gradient: linear-gradient(to bottom, #707670, #575b57);
        --text-color: #d2c4b5;
        --box-background: #4d514d;
        --button-background: #3f6b3f;
        --button-hover: #c97c5d;
        --shadow-color: rgba(0, 0, 0, 0.5);
        --svg-filter: invert(94%) sepia(10%) saturate(580%) hue-rotate(328deg) brightness(85%) contrast(93%);
    }
}

@font-face {
    font-family: 'Lora';
    src: url('/fonts/Lora-Regular.woff2') format('woff2'),
         url('/fonts/Lora-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Poppins';
    src: url('/fonts/Poppins-Regular.woff2') format('woff2'),
         url('/fonts/Poppins-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Lora';
    src: url('/fonts/Lora-Bold.woff2') format('woff2'),
         url('/fonts/Lora-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Poppins';
    src: url('/fonts/Poppins-Bold.woff2') format('woff2'),
         url('/fonts/Poppins-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

html, body {
    height: 100%;
}

body {
    font-family: 'Poppins', sans-serif;
    background: var(--background-gradient);
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    color: var(--text-color);
    animation: fadeIn 1.2s ease-in-out;
    margin: 0 auto;
}

@keyframes fadeIn {
    from { opacity: 0; transform: translateY(0); }
    to { opacity: 1; transform: translateY(0); }
}

@keyframes float {
    0% {
        transform: translateY(0);
        box-shadow: 0px 8px 20px var(--shadow-color);
    }
    17% {
        transform: translateY(-12px);
        box-shadow: 0px 12px 25px var(--shadow-color);
    }
    33% {
        transform: translateY(0);
        box-shadow: 0px 8px 20px var(--shadow-color);
    }
    50% {
        transform: translateY(-8px);
        box-shadow: 0px 10px 22px var(--shadow-color);
    }
    67% {
        transform: translateY(0);
        box-shadow: 0px 8px 20px var(--shadow-color);
    }
    83% {
        transform: translateY(-4px);
        box-shadow: 0px 9px 21px var(--shadow-color);
    }
    100% {
        transform: translateY(0);
        box-shadow: 0px 8px 20px var(--shadow-color);
    }
}

@keyframes pulse {
    from { transform: scale(1); }
    to { transform: scale(1.1); }
}

.content-wrapper {
    display: flex;
    justify-content:center;
    align-items: center;
    height: 100%;
    max-height: 1000px;
}

.container {
    background: var(--box-background);
    padding: clamp(20px, 3vw, 50px);
    text-align: center;
    border-radius: clamp(10px, 2vw, 30px);
    box-shadow: 0px 8px 20px var(--shadow-color);
    transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
    animation: float 8s ease-in-out 1 forwards;
    z-index: 4;    
}

h1 {
    font-family: 'Lora', serif;
    color: var(--text-color);
    font-size: clamp(16px, 6vw, 64px);
}

h2 {
    font-family: 'Lora', serif;
    color: var(--text-color);
    font-size: clamp(16px, 4vw, 32px);
    text-decoration: none;
    animation: pulse 1s infinite alternate;
}

p {
    color: var(--text-color);
    line-height: 1.5;
    font-size: clamp(8px, 3vw, 32px);
}

.footer {
    position: fixed;
    bottom: 10px;
    width: 100%;
    text-align: center;
    font-size: 12px;
    color: var(--text-color);
    opacity: 0.5;
    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
    z-index: 5;
}

.footer a {
    text-decoration: none;    
    color: var(--text-color);
    font-weight: bold;
    transition: color 0.3s ease-in-out;  
    cursor: pointer;
}

.footer a:hover {
    color: var(--button-hover);
    opacity: 1;
}

.logo-button {
    position: fixed;
    top: 15px;
    right: 20px;
    display: flex;
    width: clamp(12px, 5vw, 50px);
    height: auto;
    border: none;
    cursor: pointer;
    justify-content: center;
    align-items: center; 
    z-index: 5;
}

.logo-button img {
    width: 100%;
    height: auto;
    filter: var(--svg-filter);
    transition: transform 0.3s ease-in-out;
}

.logo-button img:hover {
    transform: scale(1.1);
}

.menu-button {
    position: fixed;
    top: 10px;
    left: 15px;
    font-size: clamp(12px, 5vw, 50px);
    background: none;
    border: none;
    cursor: pointer;
    color: var(--text-color);
    transform: scale(1);
    z-index: 5;
}

.menu-button :hover {
    transform: scale(1.1);
    transition: transform 0.3s ease-in-out;
}

.menu-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
    transform: translateX(-100%);
    transition: transform 0.3s ease-in-out;
    z-index: 10;
}

.menu-overlay.show {
    transform: translateX(0);
}

.menu-content {
    text-align: center;
}

.menu-content a {
    display: block;
    color: var(--text-color);
    font-size: clamp(16px, 4vw, 32px);
    line-height: clamp(24px, 6vw, 48px);
    text-decoration: none;
    margin-bottom: clamp(10px, 2vw, 20px);
    transition: text-decoration 0.3s ease-in-out;
}

.menu-content a:hover,
.menu-content a:active {
    text-decoration: underline;
}
.modal-close,
.close-menu {
    position: absolute;
    top: clamp(15px, 4.5vw, 60px);
    right: clamp(15px, 4.5vw, 60px);
    font-size: clamp(24px, 6vw, 48px);
    background: none;
    border: none;
    cursor: pointer;
    color: var(--text-color);
    z-index: 1000;
}

.gallery {
    display: relative;
    gap: clamp(10px, 2vw, 30px);
    padding: clamp(10px, 2vw, 30px); 
    justify-content: center;
    transition: transform 0.5s ease-in-out;
    position: relative;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    
}

.gallery-navigation {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav-arrow {
    display: flex;
    justify-content: center;
    align-items: center;
    width: clamp(30px, 8vw, 75px);
    height: clamp(30px, 8vw, 75px);
    background: none;
    color: var(--text-color);
    font-size: clamp(20px, 4vw, 40px);
    cursor: pointer;
    border-radius: 50%;
    border: 2px solid var(--text-color);
    transform: scale(1);
    line-height: 1;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.nav-arrow:hover {
    background: none;
    transform: scale(1.3);
}

.gallery-wrapper {
    position: relative;
    width: 100%;
    height: auto;
    transition: height 0.3s ease-in-out;
    overflow: hidden; 
    padding-bottom: 10px; 
}

.gallery-set {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: clamp(10px, 2vw, 30px);
    opacity: 0;
    visibility: hidden;
    transition: none; 
    position: absolute;
    top: 0;
}

.gallery-set.active {
    opacity: 1;
    visibility: visible;
    position: relative;
}

.gallery img {
    width: 100%;
    height: auto;
    border-radius: clamp(4px, 1vw, 8px);
    transition: transform 0.3s cubic-bezier(0.35, -0.95, 0.50, 1.05);
    max-width: 250px;
    cursor: pointer;
}

.gallery img:hover {
    transform: scale(1.1);
}

.social-icons {
    display: inline-flex;
    align-items: center;
    gap: clamp(10px, 2vw, 30px);
}

.instagram-logo,
.facebook-logo {
    filter: var(--svg-filter);
    display: inline-block;
    width: clamp(40px, 10vw, 128px);
    height: clamp(40px, 10vw, 128px);
    transition: transform 0.3s ease-in-out;
    cursor: pointer;
}

.instagram-logo:hover {
    animation: pulse 0.6s ease-in-out infinite alternate;
}

.facebook-logo:hover {
    animation: pulse 0.6s ease-in-out infinite alternate;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    justify-content: center;
    align-items: center;
}
.modal img {
    max-width: 90%;
    max-height: 90%;
    border-radius: 10px;
}

.header-row {
    display: flex;
    justify-content: space-around;
    gap: clamp(10px, 6vw, 60px);
    cursor: pointer;
    transition: transform 0.3s ease-in-out, text-decoration 0.3s ease-in-out;
}

.header-row h2:hover {
    text-decoration: underline;
    transform: scale(1.1);
}

.aftercare-content {
    display: none;
}

.aftercare-content.active {
    display: block;
}

#instructions {
    margin-bottom: clamp(5px, 1vw, 10px);
}

.aftercare-content ol {
    padding-left: clamp(20px, 4vw, 40px);
    margin-top: clamp(10px, 2vw, 20px);
    line-height: 1.4;
    font-size: clamp(12px, 2.5vw, 18px);
    color: var(--text-color);
    text-align: left;
}

.aftercare-content ol li {
    margin-bottom: clamp(5px, 1vw, 10px);
}

ol a {
    color: inherit;
    text-decoration: underline;
}

ol a:hover, 
ol a:focus {
    color: inherit;
    text-decoration: underline;
}
  
.field label {
    font-family: 'Lora', serif;
    font-weight: bold;
    text-decoration: underline;
    font-size: clamp(16px, 4vw, 32px);
    color: var(--text-color);
}

.field input {
    display: block;
    min-width: 25%;
}

input[type="submit"] {
    font-family: 'poppins', sans-serif;
    transition-duration: 0.6s;
    padding: 6px 30px;
    font-size: clamp(8px, 3vw, 32px);
    background-color: var(--button-background);
    color: var(--text-color);
    border: none;
    border-radius: 16px; 
    cursor: pointer;
}

input[type="text"] {
    font-family: 'lora', serif;
    padding: 6px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 2px solid var(--button-background);
    border-radius: 12px;
    background-color: var(--box-background);
}

input[type=text]:focus {
    width: 80%;
  }

input:hover,
input:focus {
    background-color: var(--text-color);
    color: var(--button-background);
}

#message {
    width: clamp(200px, 50%, 600px);
    height: clamp(50px, 10vw, 300px);
    text-align: left;
    vertical-align: top;
    width: 80%;
}

